
  * Changes:
    * In route definition, the I operator is replaced with D. Existing programs
      must be updated to prevent warning from being printed.
    * Changed signatures for processor functions by adding a new last argument
      'method'. Existing scripts MAY BREAK and should be updated. Refer to
      the rrr.conf.5 manual page for correct function signatures.

  * Features:
    * Match generated messages in httpclient with their corresponding message
      triggering the query by using a report tag
    * Route messages leaving an instance to specific reader instances by topic
      or array tags
    * New parameter in httpclient to control timeout of low priority messages
      specifically
    * New array value "hdlc" for parsing HDLC messages
    * Ability in file module to write to files and devices among other new
      configuration parameters
    * New conversion type "hchar2str" in mangler module to convert individual
      bytes to strings
    * New OS object in javascript (operating-system) and ability to obtain
      hostname
    * New ModBus TCP module
    * New Lua module
    * New method on Message object in JS push_tag_object which serializes
      objects into JSON. Receiving JS instances will automatically de-
      serialize the JSON added to messages this way.
    * New parameter methods for cmodules (python3, js, perl5, lua and cmodule)
      allowing messages content to be identified before being processed. The
      processor function receives a method name.
    * Support PATCH requests in httpclient and httpserver
    * New function console.assert in JS
    * Hook messages between modules and dump them using rrr_stats 
    * Hook events and show them using rrr_stats
    * Set mode on file which are written by the file module
    * Incrementer can use prefixes ORed with incremented ID
    * Dump memory profiling using functionallity provided by jemalloc
 
  * Improvements: