@@ -2,7 +2,7 @@
 
 Read Route Record
 
-Copyright (C) 2019-2024 Atle Solbakken atle@goliathdns.no
+Copyright (C) 2024 Atle Solbakken atle@goliathdns.no
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -19,20 +19,31 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 */
 
-#ifndef RRR_GNU_H
-#define RRR_GNU_H
+#ifndef RRR_BSD_H
+#define RRR_BSD_H
 
-#include <stdarg.h>
-#include <sys/types.h>
-#include <pthread.h>
+#ifdef RRR_HAVE_LIBBSD
+#  include <bsd/unistd.h>
+#else
+#  include <unistd.h>
+#endif
 
-int rrr_vasprintf (char **resultp, const char *format, va_list args);
-int rrr_asprintf (char **resultp, const char *format, ...);
-char *rrr_strcasestr (const char *haystack, const char *needle);
-pid_t rrr_gettid(void);
-void rrr_set_thread_name(pthread_t t, const char *name);
+#ifdef RRR_HAVE_SETPROCTITLE
+#  define rrr_setproctitle setproctitle
+#else
+static void rrr_setproctitle(const char *fmt, ...) {
+	(void)(fmt);
+}
+#endif
 
-/* Use this instead of asm("") */ 
-int rrr_slow_noop (void);
+#ifdef RRR_HAVE_SETPROCTITLE_INIT
+#  define rrr_setproctitle_init(a,b,c) setproctitle_init(a,(char**)b,(char**)c)
+#else
+static void rrr_setproctitle_init(int argc, const char *argv[], const char *envp[]) {
+	(void)(argc);
+	(void)(argv);
+	(void)(envp);
+}
+#endif
 
-#endif /* RRR_GNU_H */
+#endif /* RRR_BSD_H */
